Wed Jul  8 15:04:48 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-splitter.rb, bjob.rb, controller.rb,
	  n-each-substream-mapper.rb: [SR#102] MPNewProcessorの変更に伴う変更.
	* logger.rb, exceptions.rb, exceptions.rb: 例外の修正

Mon Jul  6 19:05:37 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb, n-each-substream-mapper.rb: [SR#102] smap2, mapf対応

Mon Jul  6 17:54:44 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-splitter.rb, n-single-exportable.rb, n-splitter.rb: [SR#102] split対応

Mon Jul  6 17:21:45 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb: [SR#102] postmapping_policy: MPNewProcessor

Wed Jul  1 23:21:33 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-each-element-mapper.rb: [SR#102] map対応

Wed Jul  1 22:14:29 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb: [SR#102] 直接接続可能なアーキテクチャ

Mon Jun 29 15:37:26 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* sort18.rb, sort19.rb: [BUG:101] ソートができない
	
Mon Jun 29 15:28:04 2009  Hajime Masuda <hajime.masuda@mail.rakuten.co.jp>

	* bug fix: ファイルオープンのモードがおかしかったので直した

Wed Jun 24 20:09:31 2009  Hajime Masuda  <hajime.masuda@mail.rakuten.co.jp>

	* lib/fairy/job/each-substream-mapper.rb, lib/fairy/job/roma.rb
          test/test-roma.rb: ROMA 連携機能. 関連して mapf に :N オプション
	  追加 (平滑化深さ指定. 1.9 のみ)

Mon Jun  8 17:20:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/{controller,master,node,processor}, lib/fairy.rb,
	  share/encodinf.rb: [SRS#78] 入力ファイルのエンコーディングができる
	* share/locale.rb: locale関係をくくり出した

Mon Jun  8 14:55:46 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb: [SRS#10] 適切な例外の定義

Wed Jun  3 18:24:54 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: [SR#80] 可動待ちノードの切り離し機能

Wed Jun  3 17:48:48 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-local-file-output.rb, local-file-output.rb: [SR#99]
	  local-file-outputでまとめ送りする
	* bhere.rb, here.rb: [SR#98] hereでまとめ送りする
	* n-local-file-output.rb: 行分割がちゃんとできていなかった.