@@ -548,7 +548,8 @@ Log::debug(self, "TERMINATE: #5")
 	  #BInput系
 	  @policy = MPInputProcessor.new(self)
 	when BGroupBy
-	  @policy = MPNewProcessorN.new(self)
+#	  @policy = MPNewProcessorN.new(self)
+	  @policy = MPNewProcessor.new(self)
 	when BSplitter
 	  @policy = MPNewProcessor.new(self)
 	else
@@ -646,10 +647,10 @@ Log::debug(self, "YYYYYYY: #{@input}")
 
 	pre_bjob.start_export(@input)
 
-	# thread を立ち上げるべき
-	# このままでは, 十分に並列性が取れない(for [REQ:#5)]
-	controller.assign_new_processor(target_bjob) do |processor|
-	  pre_bjob.each_export_by(@input, self) do |export|
+	pre_bjob.each_export_by(@input, self) do |export|
+	  # thread を立ち上げるべき
+	  # このままでは, 十分に並列性が取れない(for [REQ:#5)]
+	  controller.assign_new_processor(target_bjob) do |processor|
 	    # シリアライズに処理されることが前提になっている
 	    @export = export
 	    @import = target_bjob.create_import(processor)
