@@ -2782,5 +2782,25 @@ when "59.3.1"
 when "59.4"
   fairy.input(["sample/wc/data/sample_30M.txt"]).mapf(%{|e| e.chomp.split}).output("test/test-output")
 
+
+when "59.5"
+  fairy.input(["sample/wc/data/sample_30M.txt"]).mapf(%{|e| e.chomp.split}).group_by(%{|w| /[[:alpha:]]/ =~ w[0] ? w[0].upcase : /[[:digit:]]/ =~ w[0] ? "n" : "z" }).output("test/test-output")
+
+#  sleep 1000
+
+when "59.6"
+  f = fairy.input(["sample/wc/data/sample_30M.txt"])
+  f = f.mapf(%{|ln| begin
+                      ln.chomp.split
+		    rescue
+		      []
+		    end
+  })
+  f = f.mod_group_by(%{|w| w})
+  f = f.map(%{|key, values| [key, values.size].join(" ")})
+  #  f.here.each{|e| puts e.join(" ")}
+  f.output("test/test-55.out.vf")
+
+
 end
 
